# Gyeongguk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  SETUP.md  UNREFLECTED_RESEARCH.md
src/girokhyeong_mcp/: __init__.py  config.py  law_api.py  resources.py  server.py  setup.py
src/girokhyeong_mcp/pipeline/: __init__.py  analyze_format.py  auto_runner.py  export.py  orchestrator.py  parse.py  stages.py  storage.py  verify.py
src/girokhyeong_mcp/resources/: brief_templates.json  claim_catalog.json  review_axes.json  rules.md
src/girokhyeong_mcp/util/: __init__.py  hanja.py  markdown.py
tests/: test_smoke.py
